<resources>
    <string name="app_name">NavyBuddy</string>

    <string name="appNameAndVersionNoAtMenu">
        Navy බඩී App\n
        Version 1.0
    </string>

    <string name="specialThanksText">
        ▶️Navyබඩී app එක නිර්මාණය කිරීම වෙනුවෙන් පලමුවෙන්ම මාගේ අම්මා,තාත්තා හා අයියාට බෙහෙවින්ම ස්තූතියි!.\n
        ▶️මෙම app එක නිර්මාණය කිරීම සදහා සහයෝගය ලබාදුන් ශ්‍රී ලංකා නාවික හමුදාවේ සේවය කරන සියලු දෙනාටද,
        අන්තර්ජාලයෙන් සහයෝගය ලබාගත් සියලුම web අඩවි හා youtube නාලිකා වලටද,
        වචනෙකින් හෝ සහයෝගය ලබාදුන් ඔබ සියලු දෙනාටද ස්තූතිය පුදකර සිටිනවා!..
    </string>
    
    <string name="installNupdateTheAppText">
        ▶️මෙම app එක වෙනත් දුරකතනයකට install කිරීමට හෝ\n
        ▶️මෙම app එක update කිරීමට පහත webඅඩවියට පිවිසෙන්න.\n\n
        \u0019\u0020\u0020\u0020\u0020\u0020<a href="https://github.com/hankyoTutorials/navyBuddyApp">www.github.com/hankyoTutorials/navyBuddyApp</a>\n\n
        ▶️"navyබඩී" app එක ගොඩනැගීම සදහා ඔබටත් දායක විය හැක.
    </string>

    <string name="privacyPolicyText">
        ▶️Navyබඩී app එක භාවිතය සදහා ඔබගේ දුරකතනයේ Strorage,Camera,Location වැනි Permission කිසිවක් අවශ්‍ය නොවන අතර,\n
        ▶️Navyබඩී app එක භාවිතයෙන් ඔබට ශ්‍රී ලංකා නාවික හමුදාව මගින් සපයා ඇති පොදු අන්තර්ජාල සේවා සපයන web අඩවි කිහිපයකට පිවිසිය හැකි අතර
        එම web අඩවි වලට පිවිසීමට ඔබ විසින් සපයන UserName හා Password තාවකාලිකව ඔබගේ දුරකතනයේ WebView Cache මත සුරක්ෂිතව Encript වේ.\n
        ▶️මෙම app එක වෙත ඇතුලත් කරන දත්ත කිසිවක් ලබාගැනීම හෝ බෙදාහැරීම අප විසින් සිදු නොකරයි.
    </string>

    <string name="licenseText">
        ▶️NavyBuddy app එක Open source license එකක් වන "GNU General Public License" යටතේ license කරඇති අතර ඔබට මෙම app එක නොමිලේ Install කර භාවිත කල හැක.\n
        <a href="https://github.com/hankyoTutorials/navyBuddyApp/blob/master/LICENSE.md">www.github.com/hankyoTutorials/navyBuddyApp/blob/master/LICENSE.md</a>\n
▶️තවද මෙම app එක සාදාඇති කේතයන් ඔබට නැරඹිය හැකි අතර මෙම android app එක වෙනස් කිරීමට හා ප්‍රතිනිර්මාණය කිරීමට ඔබට අවසර තිබේ.
    </string>

    <string name="contactUsText">
        ඔබගේ යෝජනා,චෝදනා හා අදහස් අපට Email කරන්න:\n\n
        \u0019\u0020\u0020\u0020\u0020\u0020<a href="hankyomail@gmail.com">hankyomail@gmail.com</a>\n
    </string>

    <string name="whenYourMoodIsUpsetText">
       🛌නිදාගන්න\n
       🏞️කරන දේ පොඩ්ඩකට නවත්තල, ඔය පරිසරයෙන් මිදිල, පොඩ්ඩක් Rest කරන්න\n
       👫ඔයා මානසික පීඩනය නැතිකරන අය එක්ක දවසින් වැඩිවෙලාවක් ගතකරන්න\n
       🎤ඔයාගෙ දුක,වේදනාව පාවිච්චි කරල කලාත්මක නිර්මාණයක් කරන්න පුලුවන්නම් හොදයි\n
       🚶ඔයා Introvert කෙනෙක්නම් දවසෙන් වැඩිවෙලාවක් තනියම ඉන්න\n
       🧑🏻‍⚕ඔයාට ශාරීරකව අමාරුවක් තියෙනවනම් doctor කෙනෙක්ගෙන් බෙහෙත් ගන්න\n
       🧊ඔයාගෙ ඇගේ heat එක වැඩිනම් cool මොනාහරි බොන්න, cool පරිසරයකට යන්න\n
       🍵ඔයාගෙ ඇගේ cool එක වැඩිනම් hot මොනාහරි බොන්න, hot පරිසරයකට යන්න\n
       💏ඔයා ආදරේ අයව මුණගැහෙන්න හෝ ආදරේ අයට call කරන්න\n
       🦸ඔයාගෙ භාහිර පෙනුම උපරිම ලස්සනට තියාගන්න,ලස්සනට අදින්න\n
       🍗ඔයා ආස දේවල් කන්න බොන්න\n
       🎧ඔයා ඉන්න mood එකට ගැලපෙන සිංදු අහන්න\n
       👚ඇගට හිරවෙන්නෙ නැති, ඔයා කැමතිම ඇදුම් අදින්න\n
       🪘ඔයා කැමති සංගීත භාණ්ඩයක් play කරන්න, සිංදු කියමු, dance කරමු\n
       🫂ඔයාගෙ හිතේ තියෙන හැමදේම සමීප කෙනෙක්ට කියන්න\n
       😞ඔයා අවුල් mood එකකින් හිටියට කමක් නෑ, ඔයාගෙ ඇත්ත mood එක, ඇත්ත emotions මිනිස්සුන්ට පෙන්න\n
       🐕සුරතල් සතෙක්ව ඇසුරු කරන්න\n
       🏃ඔයා කරන්න ආසම දේ කරන්න දවසෙන් විනාඩි 5ක් හරි වෙන්කරන්න\n
       🏏අතීතයේදි ඔයාව සතුටු කරපු දේවල් මතක් කරල ආයෙමත් කරන්න\n
       🕵️ඔයාට තියෙන ගැටළු වලට විසදුම් හොයන්න, අනිත් අයගෙනුත් උදව් ගන්න\n
       🏋️ඔයාට ඔයාගැන අභිමානයක් ඇතිවෙන දේවල් කරන්න\n
       ❤️මේ මොහොතේ ඔයාට සතුටක් ලබන්න කරන්න පුලුවන් දේවල් කල්පනා කරන්න\n
       🙋නිතර නිතර ඔයා කරන්න දක්ෂම දේ අනිත් අයත් එක්ක බෙදාගන්න(e.g: උයන්න,සිංදු කියන්න,චිත්‍ර අදින්න, විහිළු කරන්න, මුදල් උපයන්න, අලුත් නිර්මාණයක් හදන්න, දැනුම වගේ ඔයාගෙ දක්ෂතාවය අනිත් අයට නිතර නිතර බෙදාහරින්න)
    </string>

    <string name="whenYouSleepyText">
       🥤වතුර නිතර නිතර බොන්න\n
        🍬මොනාහරි කන්න\n
        🍵ටී,කෝපි,ප්ලේන්ටි බොන්න\n
        ❤️තමන් ආස දේකට අවධානය දෙන්න\n
        🏃වටපිටාවෙ පොඩ්ඩක් ඇවිදින්න
    </string>
    
    <string name="sendUsYourStressReleasingMeditationsText">
        මේ List එකේ නැති Stress එක උඩුකරන දේවල් ඔයා දන්නවනම්,\n
        ඒව අපිට Email එකකින් එවන්න: <a href="hankyomail@gmail.com">hankyomail@gmail.com</a>
    </string>

    <string name="checkListsHelpWindowHelpMessage">
        🔵එදිනෙදා කරන දේවල් වල පියවර වෙන් වෙන්ව List වල Save කරල ඒ පියවර එකින් එක ඉවර කරල දාන්න ඔයාට පුලුවන්\n\n
        🔵ඔයාට ගන්න තියෙන බඩු List එකක්\n
        🔵පුද්ගලයින් ගණන බලාගන්න නම් list එකක්\n
        🔵කරන්න තියෙන වැඩ list එකක් \n
        \u0019\u0020\u0020\u0020වගේ දේවල් උනත් දාගෙන එකින් එක tick කරන්න ඔයාට පුලුවන්.\n\n
        🔵New List ගිහින් ඔයා කැමති List ටිකක් Add කරගන්න පුලුවන්.
    </string>

    <string name="checkListEditorItemsHintMessage">
        ඔයාගෙ list එකේ තියෙන දේවල් එකින් එක පහලට type කරන්න (e.g: නිවාඩුවෙදි කරන්න තියෙන වැඩ)\n\n
        පොඩි trip එකක් යනව\n
        වගාව නඩත්තු කරනව\n
        bike repair\n
        නෑදෑ ගෙදරක යනව\n
        ගෙදර හා වටපිටාව පිරිසිදු කරනව\n
        ගෙදරට අවශ්‍ය බඩුටික ගන්නවා\n
        etc...
    </string>
</resources>